<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">


    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.thorweather.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_favourite"
        android:name="com.example.thorweather.ui.favourite.FavouriteFragment"
        android:label="@string/title_favourite"
        tools:layout="@layout/fragment_favourite">
        <action
            android:id="@+id/action_navigation_favourite_to_navigation_map"
            app:destination="@id/navigation_map" />
        <action
            android:id="@+id/action_navigation_favourite_to_navigation_FavouriteFragment"
            app:destination="@id/navigation_FavouriteFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_alert"
        android:name="com.example.thorweather.ui.alert.AlertFragment"
        android:label="@string/title_alert"
        tools:layout="@layout/fragment_alert" />
    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.thorweather.ui.setting.SettingFragment"
        android:label="@string/title_alert"
        tools:layout="@layout/fragment_setting" />
    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.thorweather.ui.favourite.MapsFragment"
        android:label="@string/search_here"
        tools:layout="@layout/fragment_maps">
        <action
            android:id="@+id/action_navigation_map_to_navigation_favourite"
            app:destination="@id/navigation_favourite"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/navigation_FavouriteFragment"
        android:name="com.example.thorweather.ui.favourite.FavouriteDetailsFragment"
        android:label="FavouriteDetailsFragment"
        tools:layout="@layout/fragment_home" />
    <dialog
        android:id="@+id/addingNewAlertDialog"
        android:name="com.example.thorweather.ui.alert.AddingNewAlertDialog"
        android:label="AddingNewAlertDialog">
        <action
            android:id="@+id/action_addingNewAlertDialog_to_navigation_alert"
            app:destination="@id/navigation_alert" />
    </dialog>


</navigation>