<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/dark_grey_weather"
    android:paddingHorizontal="12dp"
    android:paddingVertical="12dp"
    tools:context="com.example.thorweather.ui.alert.AddingNewAlertDialog">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fromConstraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:background="@drawable/shaper_alert_dialog"
        android:backgroundTint="@color/light_yellow_weather"
        android:elevation="12dp"
        android:paddingHorizontal="24dp"
        android:paddingVertical="4dp"
        app:layout_constraintEnd_toEndOf="@+id/chooseFromConstraintLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/from"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toConstraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:background="@drawable/shaper_alert_dialog"
        android:backgroundTint="@color/light_yellow_weather"
        android:elevation="12dp"
        android:paddingHorizontal="24dp"
        android:paddingVertical="4dp"
        app:layout_constraintEnd_toEndOf="@+id/chooseToConstraintLayout"
        app:layout_constraintStart_toEndOf="@id/fromConstraintLayout"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/to"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/chooseFromConstraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/shaper_alert_dialog"
        android:elevation="12dp"
        android:paddingHorizontal="24dp"
        android:paddingVertical="12dp"
        app:layout_constraintStart_toStartOf="@id/fromConstraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/fromConstraintLayout">

        <TextView
            android:id="@+id/dateFromTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="15 Mar" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/chooseToConstraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shaper_alert_dialog"
        android:elevation="12dp"
        android:paddingHorizontal="24dp"
        android:paddingVertical="12dp"
        app:layout_constraintStart_toStartOf="@id/toConstraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/toConstraintLayout"
        app:layout_constraintTop_toTopOf="@+id/chooseFromConstraintLayout">

        <TextView
            android:id="@+id/dateToTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="15 Mar" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/chooseTimeConstraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/shaper_alert_dialog"
        android:elevation="12dp"
        android:paddingHorizontal="24dp"
        android:paddingVertical="12dp"
        app:layout_constraintEnd_toEndOf="@+id/toConstraintLayout"
        app:layout_constraintStart_toStartOf="@id/fromConstraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/chooseFromConstraintLayout">

        <TextView
            android:id="@+id/chosenHourTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="3:00AM" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/saveButton"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/shaper_alert_dialog"
        android:clickable="false"
        android:enabled="false"
        android:text="@string/save"
        android:textSize="12sp"
        app:backgroundTint="@color/light_yellow_weather"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseTimeConstraintLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>